# Tracium

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/monitor/: Cargo.toml
crates/monitor/src/: lib.rs  qoe.rs
crates/probe/: Cargo.toml
crates/probe/src/: asn.rs  bandwidth.rs  bufferbloat.rs  devices.rs  dns.rs  ifstat.rs  lib.rs  netinfo.rs  ping.rs  router.rs  security.rs  speedtest.rs  traceroute.rs  wifi.rs
crates/store/: Cargo.toml
crates/store/migrations/: 0001_init.sql
crates/store/src/: diagnostics.rs  lib.rs
db/: schema.sql
docs/: data-model.md  development.md  feature-complexity.md  oss-integration.md
docs/superpowers/plans/: 2026-07-24-automated-diagnostics.md
docs/superpowers/specs/: 2026-07-24-automated-diagnostics-design.md
packaging/: README.md
packaging/aur/: PKGBUILD
packaging/flatpak/: README.md  com.tracium.app.yml
packaging/snap/: snapcraft.yaml
packaging/systemd/: tracium.service
scripts/: bench.ps1  bench.sh  fetch-sidecars.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
