[package]
name = "netpulse"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "NetPulse — know your network, inside and out."
default-run = "netpulse"

[lib]
name = "netpulse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
netpulse-store = { path = "../crates/store" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
