[package]
name = "tracium"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tracium — know your network, inside and out."
default-run = "tracium"

[lib]
name = "tracium_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tracium-store = { path = "../crates/store" }
tracium-monitor = { path = "../crates/monitor" }
tracium-probe = { path = "../crates/probe" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
