[package]
name = "tracium-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tracium headless daemon + CLI — background monitoring with no GUI."

[[bin]]
name = "traciumd"
path = "src/main.rs"

[dependencies]
tracium-store = { path = "../store" }
tracium-monitor = { path = "../monitor" }
tracium-probe = { path = "../probe" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
dirs = "5"
