[package]
name = "tracium-monitor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tracium monitoring orchestration: sampler loop + outage detection."

[dependencies]
tracium-store = { path = "../store" }
tracium-probe = { path = "../probe" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
