[package]
name = "netpulse-probe"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "NetPulse connectivity probing: unprivileged TCP-connect latency/jitter/loss."

[dependencies]
tokio = { workspace = true }
hickory-resolver = "0.24"
ureq = "2"

[dev-dependencies]
tokio = { workspace = true }
