[package]
name = "netpulse-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "NetPulse storage layer: SQLite schema, migrations, and typed access."

[dependencies]
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
tempfile = "3"
